--- a/imports/components/market/market.html
+++ b/imports/components/market/market.html
@@ -1,5 +1,7 @@
 <header>
-    <h1>Trading Floor</h1>
+    <div class="page-header">
+        <h1>Trading Floor</h1>
+    </div>
 </header>
 
 <body>
