--- a/imports/components/stocks/stocks-list.html
+++ b/imports/components/stocks/stocks-list.html
@@ -11,7 +11,7 @@
         <tbody>
             <tr ng-repeat="stock in $parent.stocks">
                 <td class="col-md-3">{{stock["1. symbol"]}}</td>
-                <td class="col-md-3">{{stock["2. price"]}}</td>
+                <td class="col-md-3">${{stock["2. price"]}}</td>
             </tr>
         </tbody>
     </table>
